--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 *.out
 *.app
 *.user
+build-qt_pif_graf-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/main.cpp.DBFAA4E2AF16DD04.idx
